--- a/原生三件套/JavaScript相关/ES6-11/ES9/2-正则命名分组.html
+++ b/原生三件套/JavaScript相关/ES6-11/ES9/2-正则命名分组.html
@@ -1,38 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>正则扩展-命名捕获分组</title>
+	</head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>正则扩展-命名捕获分组</title>
-</head>
+	<body>
+		<script>
+			//声明一个字符串
+			// let str = '<a href="http://www.atguigu.com">尚硅谷</a>';
 
-<body>
-    <script>
-        //声明一个字符串
-        // let str = '<a href="http://www.atguigu.com">尚硅谷</a>';
+			// //提取 url 与 『标签文本』
+			// const reg = /<a href="(.*)">(.*)<\/a>/;
 
-        // //提取 url 与 『标签文本』
-        // const reg = /<a href="(.*)">(.*)<\/a>/;
+			// //执行
+			// const result = reg.exec(str);
 
-        // //执行
-        // const result = reg.exec(str);
+			// console.log(result);
+			// // console.log(result[1]);
+			// // console.log(result[2]);
 
-        // console.log(result);
-        // // console.log(result[1]);
-        // // console.log(result[2]);
+			let str = '<a href="http://www.atguigu.com">尚硅谷</a>';
+			//分组命名
+			const reg = /<a href="(?<url>.*)">(?<text>.*)<\/a>/;
 
-        
-        let str = '<a href="http://www.atguigu.com">尚硅谷</a>';
-        //分组命名
-        const reg = /<a href="(?<url>.*)">(?<text>.*)<\/a>/;
+			const result = reg.exec(str);
 
-        const result = reg.exec(str);
+			console.log(result.groups.url);
 
-        console.log(result.groups.url);
-
-        console.log(result.groups.text);
-    </script>
-</body>
-
+			console.log(result.groups.text);
+		</script>
+	</body>
 </html>
