--- a/原生三件套/JavaScript相关/网络请求/axios/analysis/4-axios拦截器模拟实现.html
+++ b/原生三件套/JavaScript相关/网络请求/axios/analysis/4-axios拦截器模拟实现.html
@@ -1,121 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>拦截器</title>
-    <!-- <script src="./node_modules/axios/dist/mine-axios.js"></script> -->
-</head>
-<body>
-    <script>
-        //构造函数
-        function Axios(config){
-            this.config = config;
-            this.interceptors = {
-                request: new InterceptorManager(),
-                response: new InterceptorManager(),
-            }
-        }
-        //发送请求  难点与重点
-        Axios.prototype.request = function(config){
-            //创建一个 promise 对象
-            let promise = Promise.resolve(config);
-            //创建一个数组
-            const chains = [dispatchRequest, undefined];
-            //处理拦截器
-            //请求拦截器 将请求拦截器的回调 压入到 chains 的前面  request.handles = []
-            this.interceptors.request.handlers.forEach(item => {
-                chains.unshift(item.fulfilled, item.rejected);
-            });
-            //响应拦截器
-            this.interceptors.response.handlers.forEach(item => {
-                chains.push(item.fulfilled, item.rejected);
-            });
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>拦截器</title>
+	</head>
+	<body>
+		<script>
+			// 1. 定义 Axios 构造函数
+			function Axios(config) {
+				// 保存传入的配置
+				this.config = config;
+				// 初始化拦截器对象，包含请求拦截器和响应拦截器
+				this.interceptors = {
+					request: new InterceptorManager(), // 请求拦截器管理器
+					response: new InterceptorManager() // 响应拦截器管理器
+				};
+			}
 
-            // console.log(chains);
-            //遍历
-            while(chains.length > 0){
-                promise = promise.then(chains.shift(), chains.shift());
-            }
+			// 2. 在 Axios 的原型上添加 request 方法
+			Axios.prototype.request = function (config) {
+				// 创建一个立即解决的 Promise 对象，初始值为传入的配置
+				let promise = Promise.resolve(config);
 
-            return promise;
-        }
+				// 创建一个数组，用于存储拦截器和请求分发函数
+				const chains = [dispatchRequest, undefined]; // dispatchRequest 是请求分发函数，undefined 是错误处理的占位符
 
-        //发送请求
-        function dispatchRequest(config){
-            //返回一个promise 队形
-            return new Promise((resolve, reject) => {
-                resolve({
-                    status: 200,
-                    statusText: 'OK'
-                });
-            });
-        }
-       
-        //创建实例
-        let context = new Axios({});
-        //创建axios函数
-        let axios = Axios.prototype.request.bind(context);
-        //将 context 属性 config interceptors 添加至 axios 函数对象身上
-        Object.keys(context).forEach(key => {
-            axios[key] = context[key];
-        });
+				// 处理请求拦截器
+				// 将请求拦截器的回调函数插入到 chains 数组的前面
+				this.interceptors.request.handlers.forEach(item => {
+					chains.unshift(item.fulfilled, item.rejected); // fulfilled 是成功回调，rejected 是失败回调
+				});
 
-        //拦截器管理器构造函数
-        function InterceptorManager(){
-            this.handlers = [];
-        }
-        InterceptorManager.prototype.use = function(fulfilled, rejected){
-            this.handlers.push({
-                fulfilled,
-                rejected
-            })
-        }
+				// 处理响应拦截器
+				// 将响应拦截器的回调函数插入到 chains 数组的后面
+				this.interceptors.response.handlers.forEach(item => {
+					chains.push(item.fulfilled, item.rejected); // fulfilled 是成功回调，rejected 是失败回调
+				});
 
+				// 遍历 chains 数组，构建 Promise 链
+				while (chains.length > 0) {
+					// 每次从 chains 中取出两个回调函数（成功回调和失败回调），并添加到 Promise 链中
+					promise = promise.then(chains.shift(), chains.shift());
+				}
 
-        //以下为功能测试代码
-        // 设置请求拦截器  config 配置对象
-        axios.interceptors.request.use(function one(config) {
-            console.log('请求拦截器 成功 - 1号');
-            return config;
-        }, function one(error) {
-            console.log('请求拦截器 失败 - 1号');
-            return Promise.reject(error);
-        });
+				// 返回最终的 Promise 对象
+				return promise;
+			};
 
-        axios.interceptors.request.use(function two(config) {
-            console.log('请求拦截器 成功 - 2号');
-            return config;
-        }, function two(error) {
-            console.log('请求拦截器 失败 - 2号');
-            return Promise.reject(error);
-        });
+			// 3. 定义 dispatchRequest 函数，用于发送请求
+			function dispatchRequest(config) {
+				// 返回一个 Promise 对象，模拟请求发送
+				return new Promise((resolve, reject) => {
+					// 模拟请求成功，返回一个响应对象
+					resolve({
+						status: 200, // 状态码
+						statusText: 'OK' // 状态文本
+					});
+				});
+			}
 
-        // 设置响应拦截器
-        axios.interceptors.response.use(function (response) {
-            console.log('响应拦截器 成功 1号');
-            return response;
-        }, function (error) {
-            console.log('响应拦截器 失败 1号')
-            return Promise.reject(error);
-        });
+			// 4. 创建 Axios 实例
+			let context = new Axios({});
 
-        axios.interceptors.response.use(function (response) {
-            console.log('响应拦截器 成功 2号')
-            return response;
-        }, function (error) {
-            console.log('响应拦截器 失败 2号')
-            return Promise.reject(error);
-        });
+			// 5. 创建 axios 函数
+			let axios = Axios.prototype.request.bind(context);
 
+			// 6. 将 context 的属性（config 和 interceptors）添加到 axios 函数对象上
+			Object.keys(context).forEach(key => {
+				axios[key] = context[key];
+			});
 
-        //发送请求
-        axios({
-            method: 'GET',
-            url: 'http://localhost:3000/posts'
-        }).then(response => {
-            console.log(response);
-        });
-    </script>
-</body>
+			// 7. 定义拦截器管理器构造函数
+			function InterceptorManager() {
+				// 初始化 handlers 数组，用于存储拦截器的回调函数
+				this.handlers = [];
+			}
+
+			// 8. 在拦截器管理器的原型上添加 use 方法，用于注册拦截器
+			InterceptorManager.prototype.use = function (fulfilled, rejected) {
+				// 将成功回调和失败回调添加到 handlers 数组中
+				this.handlers.push({
+					fulfilled, // 成功回调
+					rejected // 失败回调
+				});
+			};
+
+			// 以下为功能测试代码
+
+			// 9. 设置请求拦截器
+			axios.interceptors.request.use(
+				function one(config) {
+					console.log('请求拦截器 成功 - 1号');
+					return config; // 返回配置对象，传递给下一个拦截器或请求
+				},
+				function one(error) {
+					console.log('请求拦截器 失败 - 1号');
+					return Promise.reject(error); // 返回错误，中断请求
+				}
+			);
+
+			axios.interceptors.request.use(
+				function two(config) {
+					console.log('请求拦截器 成功 - 2号');
+					return config; // 返回配置对象，传递给下一个拦截器或请求
+				},
+				function two(error) {
+					console.log('请求拦截器 失败 - 2号');
+					return Promise.reject(error); // 返回错误，中断请求
+				}
+			);
+
+			// 10. 设置响应拦截器
+			axios.interceptors.response.use(
+				function (response) {
+					console.log('响应拦截器 成功 1号');
+					return response; // 返回响应对象，传递给下一个拦截器或用户
+				},
+				function (error) {
+					console.log('响应拦截器 失败 1号');
+					return Promise.reject(error); // 返回错误，中断响应
+				}
+			);
+
+			axios.interceptors.response.use(
+				function (response) {
+					console.log('响应拦截器 成功 2号');
+					return response; // 返回响应对象，传递给下一个拦截器或用户
+				},
+				function (error) {
+					console.log('响应拦截器 失败 2号');
+					return Promise.reject(error); // 返回错误，中断响应
+				}
+			);
+
+			// 11. 发送请求
+			axios({
+				method: 'GET',
+				url: 'http://localhost:3000/posts'
+			})
+				.then(response => {
+					// 请求成功，打印响应结果
+					console.log(response);
+				})
+				.catch(error => {
+					// 请求失败，打印错误信息
+					console.error(error);
+				});
+		</script>
+	</body>
 </html>
