--- a/原生三件套/JavaScript相关/网络请求/axios/analysis/6-axios请求取消模拟实现.html
+++ b/原生三件套/JavaScript相关/网络请求/axios/analysis/6-axios请求取消模拟实现.html
@@ -1,121 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>取消请求</title>
-    <link crossorigin='anonymous' href="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <!-- <script src="./node_modules/axios/dist/mine-axios.js"></script> -->
-</head>
-<body>
-    <div class="container">
-        <h2 class="page-header">axios取消请求</h2>
-        <button class="btn btn-primary"> 发送请求 </button>
-        <button class="btn btn-warning"> 取消请求 </button>
-    </div>
-    <script>
-        //构造函数
-        function Axios(config){
-            this.config = config;
-        }
-        //原型 request 方法
-        Axios.prototype.request = function(config){
-            return dispatchRequest(config);
-        }
-        //dispatchRequest 函数
-        function dispatchRequest(config){
-            return xhrAdapter(config);
-        }
-        //xhrAdapter
-        function xhrAdapter(config){
-            //发送 AJAX 请求
-            return new Promise((resolve, reject) => {
-                //实例化对象
-                const xhr = new XMLHttpRequest();
-                //初始化
-                xhr.open(config.method, config.url);
-                //发送
-                xhr.send();
-                //处理结果
-                xhr.onreadystatechange = function(){
-                    if(xhr.readyState === 4){
-                        //判断结果
-                        if(xhr.status >= 200 && xhr.status < 300){
-                            //设置为成功的状态
-                            resolve({
-                                status: xhr.status,
-                                statusText: xhr.statusText
-                            });
-                        }else{
-                            reject(new Error('请求失败'));
-                        }
-                    }
-                }
-                //关于取消请求的处理
-                if(config.cancelToken){
-                    //对 cancelToken 对象身上的 promise 对象指定成功的回调
-                    config.cancelToken.promise.then(value => {
-                        xhr.abort();
-                        //将整体结果设置为失败
-                        reject(new Error('请求已经被取消'))
-                    });
-                }
-            })
-        }
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>取消请求</title>
+		<link crossorigin="anonymous" href="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
+	</head>
+	<body>
+		<div class="container">
+			<h2 class="page-header">axios取消请求</h2>
+			<button class="btn btn-primary">发送请求</button>
+			<button class="btn btn-warning">取消请求</button>
+		</div>
+		<script>
+			// 1. 定义 Axios 构造函数
+			function Axios(config) {
+				// 保存传入的配置
+				this.config = config;
+			}
 
-        //创建 axios 函数
-        const context = new Axios({});
-        const axios = Axios.prototype.request.bind(context);
+			// 2. 在 Axios 的原型上添加 request 方法
+			Axios.prototype.request = function (config) {
+				// 调用 dispatchRequest 函数发送请求，并返回其结果
+				return dispatchRequest(config);
+			};
 
-        //CancelToken 构造函数
-        function CancelToken(executor){
-            //声明一个变量
-            var resolvePromise;
-            //为实例对象添加属性
-            this.promise = new Promise((resolve) => {
-                //将 resolve 赋值给 resolvePromise
-                resolvePromise = resolve
-            });
-            //调用 executor 函数
-            executor(function(){
-                //执行 resolvePromise 函数
-                resolvePromise();
-            });
-        }
+			// 3. 定义 dispatchRequest 函数，用于分发请求
+			function dispatchRequest(config) {
+				// 调用 xhrAdapter 函数发送实际的 AJAX 请求，并返回其结果
+				return xhrAdapter(config);
+			}
 
-        //获取按钮 以上为模拟实现的代码
-        const btns = document.querySelectorAll('button');
-        //2.声明全局变量
-        let cancel = null;
-        //发送请求
-        btns[0].onclick = function(){
-            //检测上一次的请求是否已经完成
-            if(cancel !== null){
-                //取消上一次的请求
-                cancel();
-            }
+			// 4. 定义 xhrAdapter 函数，用于发送 AJAX 请求
+			function xhrAdapter(config) {
+				// 返回一个 Promise 对象
+				return new Promise((resolve, reject) => {
+					// 创建 XMLHttpRequest 对象
+					const xhr = new XMLHttpRequest();
 
-            //创建 cancelToken 的值
-            let cancelToken = new CancelToken(function(c){
-                cancel = c;
-            });
+					// 初始化请求
+					xhr.open(config.method, config.url);
 
-            axios({
-                method: 'GET',
-                url: 'http://localhost:3000/posts',
-                //1. 添加配置对象的属性
-                cancelToken: cancelToken
-            }).then(response => {
-                console.log(response);
-                //将 cancel 的值初始化
-                cancel = null;
-            })
-        }
+					// 发送请求
+					xhr.send();
 
-        //绑定第二个事件取消请求
-        btns[1].onclick = function(){
-            cancel();
-        }
-    </script>   
-</body>
+					// 绑定 readyStateChange 事件，监听请求状态变化
+					xhr.onreadystatechange = function () {
+						// 当请求完成时（readyState === 4）
+						if (xhr.readyState === 4) {
+							// 判断请求是否成功（状态码在 200-299 之间）
+							if (xhr.status >= 200 && xhr.status < 300) {
+								// 请求成功，返回响应对象
+								resolve({
+									status: xhr.status, // 状态码
+									statusText: xhr.statusText // 状态文本
+								});
+							} else {
+								// 请求失败，返回错误
+								reject(new Error('请求失败'));
+							}
+						}
+					};
+
+					// 处理取消请求的逻辑
+					if (config.cancelToken) {
+						// 监听 cancelToken 的 promise 对象
+						config.cancelToken.promise.then(() => {
+							// 如果取消请求被触发，则中止请求
+							xhr.abort();
+							// 将结果设置为失败，并返回错误信息
+							reject(new Error('请求已经被取消'));
+						});
+					}
+				});
+			}
+
+			// 5. 创建 Axios 实例
+			const context = new Axios({});
+
+			// 6. 创建 axios 函数
+			const axios = Axios.prototype.request.bind(context);
+
+			// 7. 定义 CancelToken 构造函数，用于取消请求
+			function CancelToken(executor) {
+				// 声明一个变量，用于保存 resolve 函数
+				var resolvePromise;
+
+				// 为实例对象添加 promise 属性
+				this.promise = new Promise(resolve => {
+					// 将 resolve 函数赋值给 resolvePromise
+					resolvePromise = resolve;
+				});
+
+				// 调用 executor 函数，传入取消请求的回调函数
+				executor(function () {
+					// 当取消请求时，执行 resolvePromise 函数
+					resolvePromise();
+				});
+			}
+
+			// 8. 获取按钮元素
+			const btns = document.querySelectorAll('button');
+
+			// 9. 声明全局变量，用于保存取消请求的函数
+			let cancel = null;
+
+			// 10. 绑定第一个按钮的点击事件，用于发送请求
+			btns[0].onclick = function () {
+				// 检测上一次的请求是否已经完成
+				if (cancel !== null) {
+					// 如果上一次请求未完成，则取消上一次请求
+					cancel();
+				}
+
+				// 创建 CancelToken 实例
+				let cancelToken = new CancelToken(function (c) {
+					// 将取消请求的函数赋值给全局变量 cancel
+					cancel = c;
+				});
+
+				// 使用 axios 发送请求
+				axios({
+					method: 'GET', // 请求方法
+					url: 'http://localhost:3000/posts', // 请求地址
+					cancelToken: cancelToken // 添加 cancelToken 配置
+				})
+					.then(response => {
+						// 请求成功，打印响应结果
+						console.log(response);
+						// 将 cancel 变量重置为 null
+						cancel = null;
+					})
+					.catch(error => {
+						// 请求失败，打印错误信息
+						console.error(error);
+						// 将 cancel 变量重置为 null
+						cancel = null;
+					});
+			};
+
+			// 11. 绑定第二个按钮的点击事件，用于取消请求
+			btns[1].onclick = function () {
+				// 如果 cancel 函数存在，则执行取消请求
+				if (cancel) {
+					cancel();
+				}
+			};
+		</script>
+	</body>
 </html>
